--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "@supabase/supabase-js": "2.44.4"
+    "@supabase/supabase-js": "2.44.4",
+    "vite": "^7.1.11",
+    "@vitejs/plugin-react": "^5.0.4",
+    "path": "^0.12.7",
+    "url": "^0.11.4"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
